--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing: border-box;
+  padding: 0%;
+  margin: 0%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #140e38;
+  font-family: 'Comfortaa', cursive;
+}
+
+.heading-1{
+  font-size: 32px;
+}
+
+.heading-2{
+  font-size: 24px;
+}
+
+.heading-3{
+  font-size: 18px;
+}
+
+.heading-4{
+  font-size: 14px;
 }
