--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,6 +9,7 @@
     padding: 1rem;
     transition: 1s;
     z-index: 10;
+    
 }
 
 .navbar-cont{
@@ -163,7 +164,8 @@
         justify-content:space-around;
         border: 2px solid white;
         border-radius: 5px;
-        padding: 5px;
+        padding: 3px;
+        cursor: pointer;
     }
 
     .small-nav{
