--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,15 +1,20 @@
 .home{
-    
+    flex-direction: column;
     width: 100%;
     display: flex;
-    justify-content: center;
-    margin-top: 5%;
+    align-items: center;
+    
     position: relative;
     z-index: 1;
     overflow: hidden;
 }
 
-.home-cont{
+
+/* ---------------------------------------------Container 1------------------------------------------------------ */
+
+
+.home-cont-1{
+    height: 100vh;
     width:85%;
     max-width: 85%;
     
@@ -29,13 +34,15 @@
 .home-text-1{
     font-weight: 700;
     line-height: 2.75rem;
-    font-size: 30.4px;
+    font-size: 32px;
+    color: white;
 }
 
 .home-text-2{
     margin-top: 68px;
     font-weight: 600;
     line-height: 1.9rem;
+    color: white;
 }
 
 .home-buttons{
@@ -58,14 +65,49 @@
     
 }
 
-.btn_main{
-    background-image: 40deg , rgb(191,104,230);
+
+/* ---------------------------------------------Container 2------------------------------------------------------ */
+
+.home-cont-2{
+    margin-top: 40px;
+    width:85%;
+    max-width: 85%;
+    
+    display: flex;
+    flex-wrap: wrap;
 }
+
+.home-text-2-1{
+    width: 100%;
+    text-align: center;
+    font-weight: 700;
+    font-size: 30px;
+    color: white;
+    position: relative;
+}
+
+.about-shade{
+    position: absolute;
+    color: #1D1741;
+    left: 50%;
+    top:-80%;
+    transform: translateX(-50%);
+    font-size: 5rem;
+    z-index: -1;
+}
+
+.home-text-2-2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+
+/* ---------------------------------------------Media Queries------------------------------------------------------ */
 
 @media (max-width:1000px){
     
-    .home-cont{
-        
+    .home-cont-1{
         flex-direction: column-reverse;
     }
 
@@ -95,7 +137,6 @@
     .home-right{
         width: 100%;
         height: 50%;
-       
     }
     
 }
@@ -131,4 +172,18 @@
         padding: 0.3rem;
     }
 
+}
+
+@media(min-width:1500px){
+    
+    .home-cont-1{
+        width: 65%;
+        max-width: 65%;
+    }
+
+    .home-cont-2{
+        margin-top: 40px;
+        width:65%;
+        max-width: 65%;
+    }    
 }
