--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -9,7 +9,6 @@
     overflow: hidden;
 }
 
-
 /* ---------------------------------------------Container 1------------------------------------------------------ */
 
 
@@ -65,6 +64,10 @@
     
 }
 
+#anim-img{
+    max-width: 100%;
+}
+
 
 /* ---------------------------------------------Container 2------------------------------------------------------ */
 
@@ -88,7 +91,7 @@
 
 .about-shade{
     position: absolute;
-    color: #1D1741;
+    color: #241f3f;
     left: 50%;
     top:-80%;
     transform: translateX(-50%);
@@ -102,7 +105,58 @@
     justify-content: center;
 }
 
+#intro{
+    max-width:50%;
+    text-align:center;
+}
 
+.home-cont-2-1{
+    margin-top: 60px;
+    width: 100%;
+    
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.home-cont-2-left{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+.home-cont-2-right{
+    width: 50%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#feature-img{
+    max-width:80%;
+}
+
+.home-cont-2-text-1{
+    color: white;
+    width: 90%;
+    padding: 1rem 0rem;
+    font-size: 24px;
+}
+.home-cont-2-text-2{
+    color: white;
+    width: 90%;
+    padding: 1rem 0rem;
+    font-size: 20px;
+}
+.home-cont-2-text-3{
+    color: #C7B8FF;
+    width: 90%;
+    padding: 1rem 0rem;
+    font-size: 16px;
+}
 /* ---------------------------------------------Media Queries------------------------------------------------------ */
 
 @media (max-width:1000px){
@@ -114,6 +168,17 @@
     .home-left{
         width: 100%;
         height: 50%;
+    }
+
+    .home-right{
+        align-items: flex-end;
+        width: 100%;
+        height: 50%;
+    }
+    
+    #anim-img{
+        max-width: 200%;
+        min-width: 80%;
     }
 
     .home-text-1{
@@ -134,15 +199,22 @@
         justify-content: center;
     }
 
-    .home-right{
-        width: 100%;
-        height: 50%;
+    #anim-img{
+        max-width: 50%;
     }
     
 }
 
 
-@media (max-width:500px){
+@media (max-width:600px){
+
+    .home-right{
+        align-items: flex-end;
+    }
+
+    #anim-img{
+        max-width: 100%;
+    }
 
     .home-text-1{
         font-size: 20px;
@@ -172,6 +244,48 @@
         padding: 0.3rem;
     }
 
+/*-------Container 2-------- */
+
+    .home-text-2-1{
+        width: 100%;
+        text-align: center;
+        font-weight: 700;
+        font-size: 24px;
+        color: white;
+        position: relative;
+    }
+
+    .about-shade{
+        display:none;
+    }
+
+    #intro{
+        max-width: 100%;
+    }
+
+    .home-cont-2-left{
+        width: 100%;
+       
+    }
+    
+    .home-cont-2-right{
+        width: 100%;
+        
+    }
+
+    .home-cont-2-text-1{
+        width: 100%;
+        font-size: 22px;
+    }
+    .home-cont-2-text-2{
+        width: 100%;
+        font-size: 18px;
+    }
+    .home-cont-2-text-3{
+        width: 100%;
+        font-size: 14px;
+    }
+    
 }
 
 @media(min-width:1500px){
