--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -117,6 +117,7 @@
 
 .hover-item:hover{
     color: rgb(0, 0, 0);
+    transform: scale3d(1.2,1.2,1.2);
 }
 
 /* -----------------------------------------------Media Queries------------------------------------------------------ */
