--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,20 @@ body{
 }
 
 .button-style{
-  background-color: brown;
+  background-image: linear-gradient(40deg, #598eff, #0044ff);
+  border-radius: 5px;
+  box-shadow: 0px 0px 15px 0px rgba(0, 47, 255, 0.75);
+  border:none;
+  font-family: 'Comfortaa', cursive;
+  font-size: 18px;
+  font-weight: bold;
+  color:white;
+  padding: 1rem;
+}
+
+.button-style:hover{
+  background-image: linear-gradient(50deg, #4c83fc, #0044ff);
+  cursor: pointer;
 }
 
 .heading-1{
@@ -73,6 +86,11 @@ body{
 
 .para-cont{
     min-width: 100%;
+  }
+
+  .button-style{
+    font-size: 14px;
+    padding: 1rem 0.4rem;
   }
 
 }
