--- a/src/Components/WhyMultipad/WhyMultipad.css
+++ b/src/Components/WhyMultipad/WhyMultipad.css
@@ -3,6 +3,12 @@
     display: flex;
     justify-content: center;
     margin-top: 200px;
+    position: relative;
+}
+
+#why-circles{
+    position: absolute;
+    right: -20%;
 }
 
 .why-multi-cont{
@@ -52,12 +58,22 @@
     .why-multi-right{
         width: 100%;
     }
+
+    #why-circles{
+        width: 300px;
+        right: -50%;
+    }
 }
 
 @media (min-width:1500px){
 
     .why-multi-cont{
         width: 65%;
+    }
+
+    #why-circles{
+        position: absolute;
+        right: -10%;
     }
 
 }
