--- a/src/Components/Roadmap/Roadmap.css
+++ b/src/Components/Roadmap/Roadmap.css
@@ -34,8 +34,11 @@
     font-size: 24px;
     font-weight: bold;
     min-width: 100%;
-    background-color: blanchedalmond;
+    background-color: rgb(0, 170, 248);
     text-align: center;
+    padding: 0.5rem;
+    border-radius: 5px;
+    color: white;
 }
 
 .card-options{
@@ -51,4 +54,29 @@
     list-style: none;
     margin-top: 10px;
     color: rgb(19, 19, 19);
+}
+
+@media(max-width:700px){
+
+    .roadmap{
+        margin-top: 100px;
+    }
+
+    .timeline{
+        width: 100%;
+        margin-top: 50px;
+    }
+
+    .card-date{
+        font-size: 20px;
+    }
+}
+
+@media(min-width:1500px){
+
+    .roadmap-cont{
+        width: 65%;
+        max-width: 65%;
+    }
+
 }
