--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -19,7 +19,7 @@
 }
 
 .footer-sec-1{
-    width: 33%;
+    width: 50%;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -31,23 +31,119 @@
 }
 
 .footer-text{
-    margin-top: 60px;
+    margin-top: 40px;
     color: white;
     line-height: 24px;
+    max-width: 70%;
+}
+
+.footer-icons{
+    display: flex;
+    align-items: center;
+    margin-top: 24px;
 }
 
 .footer-sec-2{
-    width: 33%;
-    
+    width: 50%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-end;
+    color:white;
+}
+
+.footer-head{
+    width: 50%;
+    text-align: left;    
+    font-size: 40px;
+    padding-top: 200px;
+    padding-bottom: 30px;
+    font-weight: bold;
+}
+
+.footer-li{
+    width: 50%;
+    text-align: left;    
+    list-style: none;
+    margin-top: 12px;
+    cursor: pointer;
+}
+
+@media (max-width:700px){
+    
+    .footer{
+        margin-top: 100px;
+        padding-bottom: 20px;
+    }
+
+    .footer-sec-1{
+        width: 100%;
+        padding-top: 100px;
+    }
+
+    .footer-text{
+        max-width: 100%;
+    }
+
+    .footer-sec-2{
+        width: 100%;
+        align-items: flex-start;
+    }
+
+    .footer-head{
+        width: 50%;  
+        font-size: 24px;
+        padding-top: 50px;
+        padding-bottom: 10px;
+    }
+
+    .footer-li{
+        width: 100%;
+        text-align: left;    
+        list-style: none;
+        margin-top: 12px;
+        cursor: pointer;
+    }
+
 
 }
 
-.footer-sec-3{
-    width: 33%;
-    
-    display: flex;
-    align-items: center;
+@media (min-width:1500px){
+
+    .footer{
+        min-height: 60vh;
+        margin-top: 50px;
+        background-size: cover;
+        background-image: url("../../Images/footer.png") ;
+    }
+
+    .footer-cont{
+        width: 65%;
+        max-width: 65%;
+    }
+
+    .footer-sec-1{
+        padding-top: 300px;
+    }
+
+    .footer-head{
+        padding-top: 300px;
+    }
+
+
+}
+
+@media (max-width:1499px) and (min-height:1000px){
+
+    .footer{
+        min-height: 50vh;
+        margin-top: 50px;
+        background-size: cover;
+        background-image: url("../../Images/footer.png") ;
+    }
+
+    .footer-text{
+        font-size: 16px;
+        max-width: 80%;
+    }
 
 }
