--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   margin: 0%;
 }
 
+::-webkit-scrollbar{
+  display: none;
+}
+
 body{
   background-color: #140e38;
   font-family: 'Comfortaa', cursive;
