--- a/src/Components/LaunchApp/LaunchApp.css
+++ b/src/Components/LaunchApp/LaunchApp.css
@@ -36,6 +36,7 @@
     border-radius: 20px;
     color: rgb(226, 226, 226);
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    cursor: pointer;
 }
 
 .box-head{
