--- a/src/Components/Roadmap/Roadmap.css
+++ b/src/Components/Roadmap/Roadmap.css
@@ -15,7 +15,7 @@
     display: flex;
     margin-top: 100px;
     justify-content: center;
-    width: 60%;
+    width: 70%;
 }
 
 .roadmap-cont-1{
@@ -34,7 +34,7 @@
     font-size: 24px;
     font-weight: bold;
     min-width: 100%;
-    background-color: rgb(0, 170, 248);
+    background-color: rgba(0, 170, 248, 0);
     text-align: center;
     padding: 0.5rem;
     border-radius: 5px;
@@ -44,7 +44,7 @@
 .card-options{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     min-width: 100%;
 }
 
@@ -53,7 +53,8 @@
     font-weight: bold;
     list-style: none;
     margin-top: 10px;
-    color: rgb(19, 19, 19);
+    color: #C7b8ff;
+    text-align: center;
 }
 
 @media(max-width:700px){
