--- a/src/Components/LaunchApp/LaunchApp.css
+++ b/src/Components/LaunchApp/LaunchApp.css
@@ -48,7 +48,8 @@
 .box-button{
     font-size: 16px;
     border-radius: 10px;
-    background: #318CE7;
+    background-image: linear-gradient(40deg, #f959ff, #b700ff);
+    box-shadow: 0px 0px 15px 0px rgba(247, 0, 255, 0.75);
     height:30px;
     width: 70px;
     display: flex;
@@ -112,7 +113,8 @@ progress[value]::-webkit-progress-bar {
     margin:20px;
     min-width: 200px;
     min-height: 20px;
-    background-color:#316be7;;
+    background-image: linear-gradient(40deg, #f959ff, #b700ff);
+    box-shadow: 0px 0px 15px 0px rgba(247, 0, 255, 0.75);
     display: flex;
     justify-content: center;
     align-items: center;
