--- a/src/Components/LaunchApp/Pages/Launch1.css
+++ b/src/Components/LaunchApp/Pages/Launch1.css
@@ -19,7 +19,8 @@
 .launch1-box-button{
     font-size: 16px;
     border-radius: 8px;
-    background: #318CE7;
+    background-image: linear-gradient(40deg, #f959ff, #b700ff);
+    box-shadow: 0px 0px 15px 0px rgba(247, 0, 255, 0.75);
     display: flex;
     justify-content: center;
     align-items: center;
