--- a/src/index.css
+++ b/src/index.css
@@ -50,9 +50,9 @@ body{
 }
 
 .button-style{
-  background-image: linear-gradient(40deg, #598eff, #0044ff);
+  background-image: linear-gradient(40deg, #f959ff, #b700ff);
   border-radius: 5px;
-  box-shadow: 0px 0px 15px 0px rgba(0, 47, 255, 0.75);
+  box-shadow: 0px 0px 15px 0px rgba(247, 0, 255, 0.75);
   border:none;
   font-family: 'Comfortaa', cursive;
   font-size: 18px;
@@ -62,7 +62,7 @@ body{
 }
 
 .button-style:hover{
-  background-image: linear-gradient(50deg, #4c83fc, #0044ff);
+  background-image: linear-gradient(50deg, #fc4cfc, #e100ff);
   cursor: pointer;
 }
 
