--- a/src/Components/LaunchApp/LaunchApp.css
+++ b/src/Components/LaunchApp/LaunchApp.css
@@ -26,7 +26,7 @@
 .box{
     margin: 20px;
     padding: 1rem;
-    background: rgba( 255, 255, 255, 0.30 );
+   
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 2.5px );
     -webkit-backdrop-filter: blur( 2.5px );
@@ -35,7 +35,7 @@
     max-width: 300px;
     border-radius: 20px;
     color: rgb(226, 226, 226);
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border:  #b4b4b4 solid 5px;
     cursor: pointer;
 }
 
@@ -48,8 +48,9 @@
 .box-button{
     font-size: 16px;
     border-radius: 10px;
-    background-image: linear-gradient(40deg, #f959ff, #b700ff);
-    box-shadow: 0px 0px 15px 0px rgba(247, 0, 255, 0.75);
+    background-image: linear-gradient(40deg, #252525, #3503be);
+    box-shadow: 0px 0px 15px 0px #3503be;
+    border: #b4b4b4 solid 2.5px;
     height:30px;
     width: 70px;
     display: flex;
@@ -71,7 +72,7 @@ progress[value]::-webkit-progress-bar {
   }
   
   progress[value]::-webkit-progress-value {
-    background-image: linear-gradient(40deg, #f959ff, #b700ff);
+    background-image: linear-gradient(40deg, #252525, #3503be);
   }
 
 
@@ -112,8 +113,9 @@ progress[value]::-webkit-progress-bar {
     margin:20px;
     min-width: 200px;
     min-height: 20px;
-    background-image: linear-gradient(40deg, #f959ff, #b700ff);
-    box-shadow: 0px 0px 15px 0px rgba(247, 0, 255, 0.75);
+    background-image: linear-gradient(40deg, #252525, #3503be);
+    box-shadow: 0px 0px 15px 0px #3503be;
+    border: #b4b4b4 solid 2.5px;
     display: flex;
     justify-content: center;
     align-items: center;
