--- a/src/Components/LaunchApp/Pages/Launch1.css
+++ b/src/Components/LaunchApp/Pages/Launch1.css
@@ -3,12 +3,16 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
+.mat-table{
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 1.5px );
+    -webkit-backdrop-filter: blur( 2.5px );
+}
 .launch1-box{
     width: 40%;
-    background: rgba( 255, 255, 255, 0.30 );
+   border: #b4b4b4 solid 5px;
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 2.5px );
+    backdrop-filter: blur( 1.5px );
     -webkit-backdrop-filter: blur( 2.5px );
     padding: 1rem;
     margin: 10px;
@@ -19,8 +23,9 @@
 .launch1-box-button{
     font-size: 16px;
     border-radius: 8px;
-    background-image: linear-gradient(40deg, #f959ff, #b700ff);
-    box-shadow: 0px 0px 15px 0px rgba(247, 0, 255, 0.75);
+    background-image: linear-gradient(40deg, #252525, #3503be);
+    box-shadow: 0px 0px 15px 0px rgba(76, 0, 255, 0.75);
+    border: #b4b4b4 solid 2.5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,12 +65,14 @@
     z-index: 5;
     margin-top: 60px;
     padding: 1rem;
+   
+   
 }
     
 .table-button{
     padding: 0.6rem 1.2rem;
     border: none;
-    background-image: linear-gradient(40deg, #f959ff, #b700ff);
+    background-image: linear-gradient(40deg, #252525, #3503be);
     border-radius: 8px;
     cursor:pointer;
     color: white;
